testdata/parser/negative/3.txt
Parse error at 3.pdl:7:3: Illegal nested synchronous statement
		synchronous {
		^
